# NeoOptimize

./: .distignore  .dockerignore  .env  .eslintrc.cjs  .gitattributes  .gitignore  00_START_HERE_RELEASE.md  CHANGELOG.md  CHANGELOG_2026-03-10.md  CONTRIBUTING.md  Dockerfile  Dockerfile.txt  FINAL_RELEASE_GUIDE.md  INSTALL.md  InstallationLog.txt  LICENSE  LICENSE-EULA.txt  NEOAI_IMPLEMENTATION_COMPLETE.md  QUICK_RELEASE.md  README-Testrun.md  README.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_v1.0.md  RELEASE_READY.md  SECURITY.md  SIGNPATH.md  SOURCE_DISTRIBUTION.md  TUTORIALS.md  VERSION.txt  app.py  audit_report.txt  build-engine.ps1  components.xml  copy_dll_to_outputs.ps1  docker-compose.yml  find_and_run_msbuild.ps1  index.html  msbuild_build.ps1  network.xml  package-lock.json  (+6 more)
Data/: registration.json
NeoOptimize.DllLoadTester/: Program.cs
NeoOptimize.Engine/: NeoOptimize.Engine.vcxproj
NeoOptimize.TestHarness/: Program.cs
NeoOptimize.Tests/: CleanerViewModelTests.cs  NeoOptimize.Tests.csproj
NeoOptimize.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NeoOptimize.UI.csproj
NeoOptimize.UI.ConsoleTest/: NeoOptimize.UI.ConsoleTest.csproj  Program.cs
OpenFangBridge/: agents.toml  deploy_security_onion.sh  install_openfang_so.sh
agent/: NeoOptimize.Agent.Install.ps1  NeoOptimize.Agent.csproj  NeoOptimize_Uninstaller.ps1  Program.cs  README.md  agent.js  appsettings.json  package.json
ai-engine/: ai_engine.py  neocortex.py  (+1 more)
client-nextgen/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client-nextgen/src-tauri/src/: main.rs
(+953 files in other folders)
