[package]
name = "neooptimize"
version = "1.0.0"
description = "NeoOptimize Rust NextGen UI"
authors = ["Zenthralix-Lab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
